fin chapire controller, services, routes...

--- a/src/OC/Platform2Bundle/Resources/views/Advert/add.html.twig
+++ b/src/OC/Platform2Bundle/Resources/views/Advert/add.html.twig
@@ -11,7 +11,8 @@
     {{ include("@OCPlatform2/Advert/form.html.twig") }}
 
     <p>
-        Vous créez une nouvelle annonce. Merci de ne pas dupliquer une annonce pour en modifier le contenu, vous pouvez la modifier directement en allant sur la page de votre annonce.
+        Attention : cette annonce sera ajoutée directement
+        sur la page d'accueil après validation du formulaire.
     </p>
 
 {% endblock %}
