cration de nouvelles entités et relations - chap Relations

--- a/src/OC/Platform2Bundle/Resources/views/Advert/view.html.twig
+++ b/src/OC/Platform2Bundle/Resources/views/Advert/view.html.twig
@@ -36,4 +36,19 @@
         </a>
     </p>
 
+
+    {% for application in listApplications %}
+
+        <div class="well">
+            <h4>
+                {{ application.author }}
+            </h4>
+            <p>
+                {{ application.content }}
+            </p>
+        </div>
+
+
+    {% endfor %}
+
 {% endblock %}
